--- a/day02/Day02Wpf/WpfBasicApp01/Views/MainView.xaml
+++ b/day02/Day02Wpf/WpfBasicApp01/Views/MainView.xaml
@@ -3,13 +3,15 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:cal="http://caliburnmicro.com"
+        xmlns:dialogs="http://metro.mahapps.com/winfx/xaml/controls"
         xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
         xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
-        xmlns:cal="http://caliburnmicro.com"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfBasicApp01.Views"
         mc:Ignorable="d"
-        Title="Caliburn.Micro 앱" Height="350" Width="600">
+        Title="Caliburn.Micro 앱" Height="350" Width="600"
+        dialogs:DialogParticipation.Register="True">
     <Grid>
         <StackPanel Orientation="Vertical" Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center">
             <!-- Binding Greeting property to the Label's Content -->
