--- a/day04/Day04Wpf/WpfBookRentalShop01/Views/MainView.xaml
+++ b/day04/Day04Wpf/WpfBookRentalShop01/Views/MainView.xaml
@@ -56,13 +56,13 @@
                     </MenuItem.Icon>
                 </MenuItem>
 
-                <MenuItem Header="회원관리">
+                <MenuItem Header="회원관리" Command="{Binding ShowMembersCommand}">
                     <MenuItem.Icon>
                         <iconPacks:PackIconPhosphorIcons Kind="UserListBold" />
                     </MenuItem.Icon>
                 </MenuItem>
 
-                <MenuItem Header="대여관리">
+                <MenuItem Header="대여관리" Command="{Binding ShowRentalsCommand}">
                     <MenuItem.Icon>
                         <iconPacks:PackIconFontAwesome Kind="TruckRampBoxSolid" />
                     </MenuItem.Icon>
