--- a/day09/Day09Study/WpfMqttSubApp/Views/MainView.xaml
+++ b/day09/Day09Study/WpfMqttSubApp/Views/MainView.xaml
@@ -5,6 +5,8 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:local="clr-namespace:WpfMqttSubApp.Views"
+    xmlns:helper="clr-namespace:WpfMqttSubApp.Helpers"
+    xmlns:vm="clr-namespace:WpfMqttSubApp.ViewModels"
     xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
     xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
     xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
@@ -12,6 +14,7 @@
     ResizeMode="NoResize"
     Title="IoT Mqtt Subscribe App" Height="350" Width="600"
     Dialog:DialogParticipation.Register="{Binding}">
+    
     <mah:MetroWindow.IconTemplate>
         <DataTemplate>
             <iconPacks:PackIconSimpleIcons Kind="EclipseMosquitto" Foreground="White"
@@ -44,7 +47,9 @@
             </Button>
         </StackPanel>
 
-        <RichTextBox Grid.Row="1" Margin="5" VerticalScrollBarVisibility="Visible">
+        <RichTextBox x:Name="LogBox" Grid.Row="1" Margin="5" VerticalScrollBarVisibility="Visible"
+                     IsReadOnly="True"
+                     helper:RichTextBoxHelper.BindableDocument="{Binding LogText, UpdateSourceTrigger=PropertyChanged}">
             <RichTextBox.Resources>
                 <Style TargetType="Paragraph">
                     <Setter Property="Margin" Value="0" />
