--- a/day09/Day09Study/WpfMqttSubApp/Views/MainView.xaml
+++ b/day09/Day09Study/WpfMqttSubApp/Views/MainView.xaml
@@ -6,15 +6,13 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:local="clr-namespace:WpfMqttSubApp.Views"
     xmlns:helper="clr-namespace:WpfMqttSubApp.Helpers"
-    xmlns:vm="clr-namespace:WpfMqttSubApp.ViewModels"
     xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
     xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
     xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
     mc:Ignorable="d"
     ResizeMode="NoResize"
-    Title="IoT Mqtt Subscribe App" Height="350" Width="600"
+    Title="IoT MQTT Subscribe App" Height="350" Width="600"
     Dialog:DialogParticipation.Register="{Binding}">
-    
     <mah:MetroWindow.IconTemplate>
         <DataTemplate>
             <iconPacks:PackIconSimpleIcons Kind="EclipseMosquitto" Foreground="White"
@@ -26,24 +24,25 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        
+
         <!-- UI컨트롤 구성 -->
         <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Right">
             <Label Content="MQTT Broker Host" VerticalAlignment="Center" />
-            <TextBox Margin="3" mah:TextBoxHelper.Watermark="브로커 주소 입력"
+            <TextBox Margin="3" mah:TextBoxHelper.Watermark="브로커주소 입력"                     
                      Width="100" Text="{Binding BrokerHost}"/>
-            <Button Margin="3"
+            <Button Margin="3" 
                     Style="{StaticResource MahApps.Styles.Button.Square.Accent}"
                     Command="{Binding ConnectBrokerCommand}">
-                <TextBlock Text="CONNECT" />
+                <TextBlock Text="CONNECT" Margin="5,0" />
             </Button>
-            <Label Content="Database Host" VerticalAlignment="Center"/>
-            <TextBox Margin="3" mah:TextBoxHelper.Watermark="DB 주소 입력"
+
+            <Label Content="Database Host" VerticalAlignment="Center" />
+            <TextBox Margin="3" mah:TextBoxHelper.Watermark="DB주소 입력"
                      Width="100" Text="{Binding DatabaseHost}"/>
-            <Button  Margin="3" 
+            <Button Margin="3"
                     Style="{StaticResource MahApps.Styles.Button.Square.Highlight}"
-                     Command="{Binding ConnectDatabaseCommand}">
-                <TextBlock Text="CONNECT" />
+                    Command="{Binding ConnectDatabaseCommand}">
+                <TextBlock Text="CONNECT" Margin="5,0" />
             </Button>
         </StackPanel>
 
@@ -55,6 +54,6 @@
                     <Setter Property="Margin" Value="0" />
                 </Style>
             </RichTextBox.Resources>
-        </RichTextBox>        
+        </RichTextBox>
     </Grid>
 </mah:MetroWindow>
